[B]1.2.1[/B]
Added: Enable all source for artwork by default

[B]1.2.0[/B]
Added: extra options for Artist Biography

[B]1.1.1[/B]
Added: handling of new format of allmusic link

[B]1.1.0[/B]
Added: language setting for last.fm artist biography

[B]1.0.0[/B]
Initial version