@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.artists.universal"
-       name="Universal Scraper"
-       version="1.2.1"
+       name="Universal Artist Scraper"
+       version="2.0.0"
        provider-name="Team XBMC">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
-    <import addon="metadata.common.last.fm" version="1.1.0"/>
-    <import addon="metadata.common.allmusic.com" version="2.2.0"/>
-    <import addon="metadata.common.musicbrainz.org" version="1.1.2"/>
-    <import addon="metadata.common.htbackdrops.com" version="1.0.7"/>
-    <import addon="metadata.common.fanart.tv" version="1.0.0"/>
+    <import addon="metadata.common.last.fm" version="1.4.0"/>
+    <import addon="metadata.common.allmusic.com" version="2.4.0"/>
+    <import addon="metadata.common.musicbrainz.org" version="1.2.0"/>
+    <import addon="metadata.common.htbackdrops.com" version="1.2.0"/>
+    <import addon="metadata.common.fanart.tv" version="1.1.0"/>
   </requires>
   <extension point="xbmc.metadata.scraper.artists"
              language="en"
