@@ -16,4 +16,9 @@
     <string id="30014">Get Artist Years Active from</string>
     <string id="30015">     Preferred Language</string>
     <string id="30016">Fallback to Artist Biography from</string>
+    <string id="30017">Fallback to Artist Discography from</string>
+    <string id="30018">Fallback to Artist Genres from</string>
+    <string id="30019">Fallback to Artist Styles from</string>
+    <string id="30020">Fallback to Artist Life-Span from</string>
+    <string id="30021">Fallbacks</string>
 </strings>
